Refactor(index.html): Add <a>tag in menu

--- a/github_header/static/html/index.html
+++ b/github_header/static/html/index.html
@@ -13,12 +13,30 @@
                 <img src="../image/github_logo_icon_main.png" alt="GitHub Logo">
             </div>
             <ul class="menu clearfix">
-                <li class="menu-item">Why Github?</li>
-                <li class="menu-item">Team</li>
-                <li class="menu-item">Enterprise</li>
-                <li class="menu-item">Explore</li>
-                <li class="menu-item">Marketplace</li>
-                <li class="menu-item">Pricing</li>
+                <li class="menu-item">
+                    Why Github?
+                </li>
+                <li class="menu-item">
+                    <a herf="https://github.com/team">
+                        Team
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a herf="https://github.com/enterprise">
+                        Enterprise
+                    </a>
+                </li>
+                <li class="menu-item">
+                    Explore
+                </li>
+                <li class="menu-item">
+                    <a herf="https://github.com/marketplace">
+                        Marketplace
+                    </a>
+                </li>
+                <li class="menu-item">
+                    Pricing
+                </li>
             </ul>
         </div>
         <div class="container-right clearfix">
@@ -26,8 +44,16 @@
                 <li class="menu-item">
                     <input type="text" class="menu-search" placeholder="Search GitHub" onfocus='this.placeholder=""' onblur='this.placeholder="Search GitHub"'>
                 </li>
-                <li class="menu-item">Sign in</li>
-                <li class="menu-item sign-up-border">Sign up</li>
+                <li class="menu-item">
+                    <a herf="https://github.com/login?return_to=%2Fenterprise">
+                        Sign in
+                    </a>
+                </li>
+                <li class="menu-item sign-up-border">
+                    <a herf="https://github.com/signup?ref_cta=Sign+up&ref_loc=header+logged+out&ref_page=%2Fenterprise&source=header">
+                        Sign up
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
