fix(index.html): make a browser title

--- a/byte-degree-html/src/index.html
+++ b/byte-degree-html/src/index.html
@@ -11,6 +11,7 @@
             rel="stylesheet"
         />
         <!-- 02. 브라우저 타이틀 표시하기(이곳에 작성) -->
+        <title>MY BLOG</title>
         <script src="./js/main.js"></script>
     </head>
     <body>
