fix(index.html): change cementic tag correctly

--- a/byte-degree-html/src/index.html
+++ b/byte-degree-html/src/index.html
@@ -16,9 +16,9 @@
     </head>
     <body>
         <!-- 헤더 -->
-        <div class="header">
+        <header class="header">
             <div class="container">
-                <h2 class="logo-title">MY BLOG</h2>
+                <h1 class="logo-title">MY BLOG</h1>
                 <nav>
                     <ul class="menu">
                         <li class="menu-item">
@@ -30,9 +30,9 @@
                     </ul>
                 </nav>
             </div>
-        </div>
+        </header>
         <!-- 본문 -->
-        <div class="content">
+        <main class="content">
             <!-- 글쓰기 영역 -->
             <section class="write">
                 <header><h2 class="title">글쓰기</h2></header>
@@ -136,7 +136,7 @@
             <section class="timeline">
                 <h2>타임라인</h2>
                 <!-- 게시글 1번 -->
-                <div class="item">
+                <article class="item">
                     <header>
                         <h3>
                             <a id="card1">이미지 태그 연습!</a>
@@ -162,9 +162,9 @@
                         <figcaption>연어덮밥(사케동)</figcaption>
                     </figure>
                     <p>토실토실 연어가 올라가 있는 사케동!</p>
-                </div>
+                </article>
                 <!-- 게시글 2번 -->
-                <div class="item">
+                <article class="item">
                     <header>
                         <h3>
                             <a id="card2">리스트 태그 연습!</a>
@@ -197,10 +197,10 @@
                             대한으로 길이 보전하세<br /><br />
                         </li>
                     </ol>
-                </div>
+                </article>
             </section>
             <!-- 우측 링크 영역 -->
-            <div class="links">
+            <nav class="links">
                 <nav>
                     <ul>
                         <li>
@@ -217,10 +217,10 @@
                         </li>
                     </ul>
                 </nav>
-            </div>
-        </div>
+            </nav>
+        </main>
         <!-- 푸터 -->
-        <div class="footer">
+        <footer class="footer">
             <div class="container">
                 <p class="copyright">MY BLOG &copy; 2020</p>
                 <address class="contact">
@@ -239,6 +239,6 @@
                     </ul>
                 </address>
             </div>
-        </div>
+        </footer>
     </body>
 </html>
