fix(index.html): change form tag correctly

--- a/byte-degree-html/src/index.html
+++ b/byte-degree-html/src/index.html
@@ -47,11 +47,11 @@
                         <p>
                             <label>
                                 내용<br />
-                                <input
+                                <textarea
                                     name="content"
                                     cols="55"
                                     rows="5"
-                                ></input>
+                                ></textarea>
                             </label>
                         </p>
                         <p>
@@ -68,7 +68,7 @@
                         <fieldset>
                             <legend>기분(단일선택)</legend>
                             <input
-                                type="checkbox"
+                                type="radio"
                                 name="feeling"
                                 value="Happy"
                                 id="feeling:Happy"
@@ -76,14 +76,14 @@
                             />
                             <label for="feeling:Happy">행복함</label><br />
                             <input
-                                type="checkbox"
+                                type="radio"
                                 name="feeling"
                                 value="Bad"
                                 id="feeling:Bad"
                             />
                             <label for="feeling:Bad">나쁨</label><br />
                             <input
-                                type="checkbox"
+                                type="radio"
                                 name="feeling"
                                 value="Sad"
                                 id="feeling:Sad"
@@ -126,8 +126,8 @@
                             <label for="category:ETC">기타 </label><br />
                         </fieldset>
                         <footer class="buttons">
-                            <button type="button">글쓰기</button>
-                            <button type="button">초기화</button>
+                            <button type="submit">글쓰기</button>
+                            <button type="reset">초기화</button>
                         </footer>
                     </form>
                 </div>
