fix(index.html): change img tag correctly

--- a/byte-degree-html/src/index.html
+++ b/byte-degree-html/src/index.html
@@ -150,14 +150,16 @@
                     <figure class="image">
                         <img
                             srcset="
-                                ./images/image-sm.jpg  400w,
-                                ./images/image-md.jpg  700w,
-                                ./images/image-lg.jpg 1000w
+                                ./assets/images/image-sm.jpg  400w,
+                                ./assets/images/image-md.jpg  700w,
+                                ./assets/images/image-lg.jpg 1000w
                             "
                             sizes="(max-width: 500px) 444px,
                                    (max-width: 800px) 777px,
                                    1222px"
                             width="400"
+                            src="./assets/images/image-lg.jpg"
+                            alt = "연어덮밥(사케동)"
                         />
                         <figcaption>연어덮밥(사케동)</figcaption>
                     </figure>
