update: resolve requests in js,html

--- a/byte-degree-html/src/index.html
+++ b/byte-degree-html/src/index.html
@@ -12,7 +12,6 @@
         />
         <!-- 02. 브라우저 타이틀 표시하기(이곳에 작성) -->
         <title>MY BLOG</title>
-        <script src="./js/main.js"></script>
     </head>
     <body>
         <!-- 헤더 -->
@@ -37,7 +36,7 @@
             <section class="write">
                 <header><h2 class="title">글쓰기</h2></header>
                 <div class="container">
-                    <form action="#">
+                    <form action="https://www.naver.com/">
                         <p>
                             <label>
                                 제목<br />
@@ -230,9 +229,9 @@
                         <li>사무실 : 서울시 강남구 강남대로 364</li>
                         <li>
                             이메일 :
-                            <a href="mailto:myblog@email.com"
-                                >myblog@example.com</a
-                            >
+                            <a href="mailto:myblog@email.com">
+                                myblog@example.com
+                            </a>
                         </li>
                         <li>
                             전화번호 :
@@ -242,5 +241,6 @@
                 </address>
             </div>
         </footer>
+        <script src="./assets/js/main.js"></script>
     </body>
 </html>
